# DAA_DES

./: .gitignore  CITATION.cff  README.md  _processing_functions.py  class_ambulance.py  class_hems.py  class_hems_availability.py  class_historic_results.py  class_patient.py  class_simulation_inputs.py  class_simulation_trial_results.py  des_hems.py  des_parallel_process.py  distribution_fit_utils.py  pyproject.toml  requirements.txt  run_dist_fit_utils.py  run_parallel_process.py
.devcontainer/: devcontainer.json
actual_data/: school_holidays_DEFAULT.csv
air_ambulance_des/: __init__.py  _processing_functions.py  class_ambulance.py  class_hems.py  class_hems_availability.py  class_historic_results.py  class_simulation_inputs.py  class_simulation_trial_results.py  des_hems.py  des_parallel_process.py  distribution_fit_utils.py  utils.py
air_ambulance_des_docs/: .gitignore  _publish.yml  _quarto.yml  citation_details.qmd  index.qmd  sync_docs.py  theme-dark.scss  theme-light.scss
app/: _app_utils.py  _state_control.py  acknowledgements.py  app.py  glossary.py  info.py  model.py  setup.py  welcome.py  what_is.py
auto_generated_documentation/: README.md  nodes - final prompt.py
book/: _quarto.yml  alternative_vehicles_in_air_ambulance_services.qmd  conceptual_model_system.qmd  data_sources.qmd  demand.qmd  helicopters_in_air_ambulance_services.qmd  intro.qmd  intro_to_des.qmd  model_classes.qmd  model_phases.qmd  notes_on_operations.qmd  references.bib  system_overview.qmd
code_compressor/: README.md  config.yaml
external_data/: README.md
tests/: conftest.py  (+5 more)
(+31 files in other folders)
