[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "air_ambulance_des"
description = "Air ambulance discrete event simulation tools"
authors = [
    {name = "Richard Pilbery"},
    {name = "Sammi Rosser"},
    {name = "Hannah Trebilcock"}
]
readme = "README.md"
keywords = ["simulation", "air ambulance", "discrete event"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["air_ambulance_des*"]
